Fixed some bugs in tables, added pagination in products table

--- a/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
@@ -6,6 +6,9 @@
             <!-- <app-admin-sidenav  [sidebarToggleInput]="sideToggleBtn" [adminSidenavInput]="adminSection"></app-admin-sidenav> -->
         </div>
         <div id="layoutSidenav_content">
+          <div class="title">
+            <h2><b>User</b> Records</h2>
+          </div>
             <main>
                 <div id="myUsersTable" class="me-5">
                 </div>
