--- a/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.scss
+++ b/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.scss
@@ -24,6 +24,11 @@ section {
   margin-left: -225px;
 }
 
+#layoutSidenav_content .title {
+	margin-left: 50px;
+	font-size: 30px;
+}
+
 .fixed-top,
 .sb-nav-fixed #layoutSidenav #layoutSidenav_nav,
 .sb-nav-fixed .sb-topnav {
@@ -363,7 +368,7 @@ table.table .avatar {
 	font-size: 13px;
 	min-width: 30px;
 	min-height: 30px;
-	color: #5e5e5e;
+	color: #353434;
 	margin: 0 2px;
 	line-height: 30px;
 	border-radius: 2px !important;
@@ -372,18 +377,18 @@ table.table .avatar {
 }
 .pagination li a:hover,
 .pagination li button:hover {
-	color: #353434;
+	color: rgb(56, 55, 55);
 }	
 .pagination li.active a,
 .pagination li.active button,
 .pagination li.active button.page-link 
 .pagination li.active a.page-link {
-  color: #5e5e5e;
+  color: #353434;
 	background: #03A9F4;
 }
 .pagination li.active a:hover,
 .pagination li.active button:hover {        
-  color: #5e5e5e;
+  color: rgb(56, 55, 55);
 	background: #0397d6;
 }
 .pagination li.disabled i {
