--- a/revalida-shopping-app/src/app/modules/admin/pages/orders/orders.component.scss
+++ b/revalida-shopping-app/src/app/modules/admin/pages/orders/orders.component.scss
@@ -24,6 +24,11 @@ section {
   margin-left: -225px;
 }
 
+#layoutSidenav_content .title {
+	margin-left: 50px;
+	font-size: 30px;
+}
+
 .fixed-top,
 .sb-nav-fixed #layoutSidenav #layoutSidenav_nav,
 .sb-nav-fixed .sb-topnav {
@@ -737,7 +742,7 @@ table.table tr th, table.table tr td {
 	font-size: 13px;
 	min-width: 30px;
 	min-height: 30px;
-	color: #5e5e5e;
+	color: #353434;
 	margin: 0 2px;
 	line-height: 30px;
 	border-radius: 2px !important;
@@ -746,14 +751,16 @@ table.table tr th, table.table tr td {
 }
 .pagination li a:hover,
 .pagination li button:hover {
-	color: #353434;
+	color: rgb(56, 55, 55);
 }	
 .pagination li.active a,
 .pagination li.active button {
-  color: #5e5e5e;
+  color: #353434;
 	background: #03A9F4;
 }
-.pagination li.active a:hover {        
+.pagination li.active a:hover,
+.pagination li.active button:hover {  
+  color: rgb(56, 55, 55);      
 	background: #0397d6;
 }
 .pagination li.disabled i {
