--- a/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.scss
+++ b/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.scss
@@ -24,6 +24,11 @@ section {
   margin-left: -225px;
 }
 
+#layoutSidenav_content .title {
+	margin-left: 50px;
+	font-size: 30px;
+}
+
 .fixed-top,
 .sb-nav-fixed #layoutSidenav #layoutSidenav_nav,
 .sb-nav-fixed .sb-topnav {
@@ -129,12 +134,14 @@ main {
     grid-template-columns: auto;
     grid-template-rows: auto;
     grid-template-areas: 
-        "productsTable formWrapper";
+        "productsTable";
     // flex-direction: row;
     // justify-content: center;
     // align-items: center;
-    padding: 0 50px;
-    column-gap: 60px;
+    padding: 0 100px;
+    // column-gap: 60px;
+	justify-items: center;
+	align-items: center;
 }
 
 #myProductsTable,  #productsTable, #myTable, main .form-wrapper {
@@ -352,25 +359,33 @@ table.table .avatar {
 	float: right;
 	margin: 0 0 5px;
 }
-.pagination li a {
+.pagination li a,
+.pagination li button {
 	border: none;
 	font-size: 13px;
 	min-width: 30px;
 	min-height: 30px;
-	color: #999;
+	color: #353434;
 	margin: 0 2px;
 	line-height: 30px;
 	border-radius: 2px !important;
 	text-align: center;
 	padding: 0 6px;
 }
-.pagination li a:hover {
-	color: #666;
+.pagination li a:hover,
+.pagination li button:hover {
+	color: rgb(56, 55, 55);
 }	
-.pagination li.active a, .pagination li.active a.page-link {
+.pagination li.active a,
+.pagination li.active button,
+.pagination li.active button.page-link
+.pagination li.active a.page-link {
+	color: #353434;
 	background: #03A9F4;
 }
-.pagination li.active a:hover {        
+.pagination li.active a:hover,
+.pagination li.active button:hover {  
+	color: rgb(56, 55, 55);
 	background: #0397d6;
 }
 .pagination li.disabled i {
