Updated profile styles and form

--- a/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
@@ -149,7 +149,7 @@
             </div>
           </div>
         </div>
-        <!-- Edit Modal HTML -->
+        <!-- Add Modal HTML -->
         <div id="addProductModal" class="modal fade">
           <div class="modal-dialog">
             <div class="modal-content">
