--- a/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.scss
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.scss
@@ -46,13 +46,13 @@ body {
   padding-left: 15px;
 }
 
-.account-form {
+.account-form form {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 
-form {
+.profile-form {
   width: 100%;
   padding: 0 20px;
   max-width: 700px;
@@ -112,4 +112,9 @@ form {
 .form-text-muted {
   color: #6c757d;
   font-size: 12px;
+}
+
+#profile-img-input {
+  margin: 15px auto 5px auto;
+  width: 250px;
 }
