--- a/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.scss
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.scss
@@ -118,3 +118,11 @@ body {
   margin: 15px auto 5px auto;
   width: 250px;
 }
+
+.small-profile img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #e9ecef;
+}
