--- a/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.html
@@ -19,7 +19,7 @@
                 class="rounded-circle"
                 alt="User Avatar"
               />
-              <p class="mt-2">John Doe</p>
+              <p class="mt-2">{{ customerName }}</p>
             </div>
             <hr />
             <ul class="nav nav-pills flex-column mb-auto">
