--- a/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.scss
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.scss
@@ -120,9 +120,14 @@ body {
 }
 
 .small-profile img {
-  width: 60px;
-  height: 60px;
+  width: 90px;
+  height: 90px;
   border-radius: 50%;
   object-fit: cover;
   border: 2px solid #e9ecef;
+}
+
+.small-profile p {
+  font-size: 20px;
+  // font-weight: bold;
 }
