--- a/revalida-shopping-app/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/dashboard/dashboard.component.html
@@ -23,24 +23,25 @@
           <div class="front-img col-md-6">
             <img
               class="card-img-top mb-5 mb-md-0"
-              src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg"
+              src="assets/img/grocery-bundle-crop.png"
               alt="..."
             />
           </div>
           <div class="col-md-6">
             <div class="small mb-1">SKU: BST-498</div>
-            <h1 class="display-5 fw-bolder">Shop item template</h1>
+            <h1 class="display-5 fw-bolder">Assorted Products Grocery Bundle</h1>
             <div class="fs-5 mb-5">
-              <span class="text-decoration-line-through">₱45.00</span>
-              <span>₱40.00</span>
+              <span class="text-decoration-line-through">₱999.00 </span>
+              <span>₱799.00</span>
             </div>
             <p class="lead">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Praesentium at dolorem quidem modi. Nam sequi consequatur
-              obcaecati excepturi alias magni, accusamus eius blanditiis
-              delectus ipsam minima ea iste laborum vero?
+              Treat yourself or a loved one to this irresistible grocery bundle, 
+              packed with popular favorites! Enjoy delicious Century Tuna, savory 
+              Palm Corned Beef, Mega Sardines, and Libby's Vienna Sausage. Plus, 
+              quick-fix meals with Lucky Me! Instant Noodles in mouthwatering flavors 
+              like Spicy Bulalo and Beef. Perfect for easy, tasty meals!
             </p>
-            <div class="d-flex">
+            <form class="d-flex">
               <input
                 class="form-control text-center me-3"
                 id="inputQuantity"
@@ -52,7 +53,7 @@
                 <i class="bi-cart-fill me-1"></i>
                 Add to cart
               </button>
-            </div>
+            </form>
           </div>
         </div>
       </div>
@@ -69,55 +70,22 @@
       <div class="container px-4 px-lg-5 mt-5">
         <h2 class="fw-bolder mb-4">Related products</h2>
         <div
-          class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
+          class="shop-item row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-flex-start"
+          
         >
-          <div class="col mb-5">
+          <div class="item col mb-5" *ngFor="let product of products$ | async">
             <div class="card h-100">
               <!-- Product image-->
               <img
                 class="card-img-top"
-                src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
+                src="assets/img/{{ product.item_img }}"
                 alt="..."
               />
               <!-- Product details-->
               <div class="card-body p-4">
                 <div class="text-center">
                   <!-- Product name-->
-                  <h5 class="fw-bolder">Fancy Product</h5>
-                  <!-- Product price-->
-                  ₱40.00 - ₱80.00
-                </div>
-              </div>
-              <!-- Product actions-->
-              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center">
-                  <a class="btn btn-outline-dark mt-auto" href="#"
-                    >View options</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-5">
-            <div class="card h-100">
-              <!-- Sale badge-->
-              <div
-                class="badge bg-dark text-white position-absolute"
-                style="top: 0.5rem; right: 0.5rem"
-              >
-                Sale
-              </div>
-              <!-- Product image-->
-              <img
-                class="card-img-top"
-                src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-                alt="..."
-              />
-              <!-- Product details-->
-              <div class="card-body p-4">
-                <div class="text-center">
-                  <!-- Product name-->
-                  <h5 class="fw-bolder">Special Item</h5>
+                  <h5 class="fw-bolder">{{ product.item_name }}</h5>
                   <!-- Product reviews-->
                   <div
                     class="d-flex justify-content-center small text-warning mb-2"
@@ -128,94 +96,36 @@
                     <div class="bi-star-fill"></div>
                     <div class="bi-star-fill"></div>
                   </div>
+                  <p class="qty">
+                    <small class="text-muted">Quantity: {{ product.quantity }}</small>
+                  </p>
                   <!-- Product price-->
-                  <span class="text-muted text-decoration-line-through"
-                    >₱20.00</span
-                  >
-                  ₱18.00
+                  <p>
+                    <small class="text-muted">Price:</small>  {{ product.unit_price | currency: 'PHP' : 'symbol': '1.2' }}
+                  </p>
                 </div>
               </div>
               <!-- Product actions-->
               <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center">
-                  <a class="btn btn-outline-dark mt-auto" href="#"
-                    >Add to cart</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-5">
-            <div class="card h-100">
-              <!-- Sale badge-->
-              <div
-                class="badge bg-dark text-white position-absolute"
-                style="top: 0.5rem; right: 0.5rem"
-              >
-                Sale
-              </div>
-              <!-- Product image-->
-              <img
-                class="card-img-top"
-                src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-                alt="..."
-              />
-              <!-- Product details-->
-              <div class="card-body p-4">
-                <div class="text-center">
-                  <!-- Product name-->
-                  <h5 class="fw-bolder">Sale Item</h5>
-                  <!-- Product price-->
-                  <span class="text-muted text-decoration-line-through"
-                    >₱50.00</span
-                  >
-                  ₱25.00
-                </div>
-              </div>
-              <!-- Product actions-->
-              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center">
-                  <a class="btn btn-outline-dark mt-auto" href="#"
-                    >Add to cart</a
-                  >
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-5">
-            <div class="card h-100">
-              <!-- Product image-->
-              <img
-                class="card-img-top"
-                src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg"
-                alt="..."
-              />
-              <!-- Product details-->
-              <div class="card-body p-4">
-                <div class="text-center">
-                  <!-- Product name-->
-                  <h5 class="fw-bolder">Popular Item</h5>
-                  <!-- Product reviews-->
-                  <div
-                    class="d-flex justify-content-center small text-warning mb-2"
-                  >
-                    <div class="bi-star-fill"></div>
-                    <div class="bi-star-fill"></div>
-                    <div class="bi-star-fill"></div>
-                    <div class="bi-star-fill"></div>
-                    <div class="bi-star-fill"></div>
+                <form class="text-center">
+                  <div class="qty-wrapper">
+                    <a href="" class="btn btn-link px-2"
+                          onclick="">
+                      <i class="fa-solid fa-minus"></i>
+                    </a>
+
+                    <input min="0" name="quantity" value="1" type="number"
+                            class="form-control form-control-sm qty-input"/>
+
+                    <a href="" class="btn btn-link px-2"
+                            onclick="">
+                        <i class="fa-solid fa-plus"></i>
+                    </a>
                   </div>
-                  <!-- Product price-->
-                  ₱40.00
-                </div>
-              </div>
-              <!-- Product actions-->
-              <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                <div class="text-center">
                   <a class="btn btn-outline-dark mt-auto" href="#"
                     >Add to cart</a
                   >
-                </div>
+                </form>
               </div>
             </div>
           </div>
