Implementing AWS CloudFront for serving S3 images

--- a/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/profile/profile.component.html
@@ -19,6 +19,7 @@
                 class="rounded-circle"
                 alt="User Avatar"
               />
+              <!-- {{savedImageUrl}} -->
               <p class="mt-2">{{ customerName }}</p>
             </div>
             <hr />
