Fixed some bugs in admin tables

--- a/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
@@ -44,7 +44,7 @@
                   <tr>
                     <th>
                       <span class="custom-checkbox">
-                        <input type="checkbox" id="selectAll" />
+                        <input type="checkbox" id="selectAll" [(ngModel)]="selectAll" (change)="toggleAllSelect()" />
                         <label for="selectAll"></label>
                       </span>
                     </th>
@@ -67,7 +67,8 @@
                           id="checkbox-{{ i }}"
                           name="options[]"
                           value="{{ i }}"
-                          (change)="onCheck(i)"
+                          [checked]="isItemSelected(i)"
+                          (change)="toggleItemSelect(i)"
                         />
                         <label for="checkbox-{{ i }}"></label>
                       </span>
