--- a/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/accounts/accounts.component.html
@@ -31,7 +31,7 @@
                             <tr>    
                               <th>
                                 <span class="custom-checkbox">
-                                  <input type="checkbox" id="selectAll">
+                                  <input type="checkbox" id="selectAll" [(ngModel)]="selectAll" (change)="toggleAllSelect()">
                                   <label for="selectAll"></label>
                                 </span>
                               </th>
@@ -49,7 +49,10 @@
                             <tr *ngFor="let account of paginatedAccounts$ | async; let i = index">
                               <td>
                                 <span class="custom-checkbox"> 
-                                  <input type="checkbox" id="checkbox-{{i}}" name="options[]" value="{{ i }}" (change)="onCheck(i)">
+                                  <input type="checkbox" id="checkbox-{{i}}" 
+                                        name="options[]" value="{{ i }}"
+                                        [checked]="isItemSelected(i)" 
+                                        (change)="toggleItemSelect(i)">
                                   <label for="checkbox-{{i}}"></label>
                                 </span>
                               </td>
