Fixed S3 bugs on products and dashboard pages

--- a/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
+++ b/revalida-shopping-app/src/app/modules/admin/pages/products/products.component.html
@@ -80,7 +80,7 @@
                         alt=""
                       /> -->
                       <img
-                        src="{{ imageUrls[i] }}"
+                        src="{{ (imageUrls[i]) ? imageUrls[i] : defaultImg }}"
                         class="table-item-img"
                         alt=""
                       />
