--- a/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.html
+++ b/revalida-shopping-app/src/app/modules/dashboard/pages/cart/cart.component.html
@@ -16,7 +16,6 @@
                   type="search"
                   placeholder="Search for products"
                   aria-label="Search"
-                  [(ngModel)]="searchQuery"
                 />
                 <button class="btn btn-outline-success" type="submit">
                   Search
@@ -47,7 +46,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let item of cartItems; let i = index">
+            <tr *ngFor="let image of imageUrls; let i = index">
                 <td colspan="6">
                   <!-- Wrapping row content in a div to allow margin -->
                   <div class="td-item border rounded shadow-sm p-3 mb-2">
@@ -56,42 +55,41 @@
                       <input
                         class="form-check-input me-3"
                         type="checkbox"
-                        [(ngModel)]="item.selected"
                         (change)="updateSelection()"
                         aria-label="Select Item"
                       />
                       <!-- Product Info -->
                       <img
-                        src="{{ item.image }}"
-                        alt="{{ item.name }}"
+                        src="{{ imageUrls[i] }}"
+                        alt="{{ groceryCart.item_name[i] }}"
                         width="60"
                         class="img-thumbnail me-3"
                       />
                       <div>
-                        <h6 class="m-0">{{ item.name }}</h6>
-                        <small class="text-muted">Variations: {{ item.variation }}</small>
+                        <h6 class="m-0">{{ groceryCart.item_name[i] }}</h6>
+                        <small class="text-muted">Variations: {{ groceryCart.quantity[i] }}</small>
                       </div>
                     </div>
           
                     <!-- Unit Price, Quantity, Total Price, Actions -->
                     <div class="td-item-info row mt-2">
-                      <div class="col-md-3">₱{{ item.price }}</div>
+                      <div class="col-md-3">₱{{ groceryCart.unit_price[i] }}</div>
                       <div class="col-md-3 text-center">
                         <div class="td-item-qty input-group input-group-sm justify-content-center">
-                          <button class="btn btn-outline-secondary" (click)="decreaseQuantity(item)">-</button>
+                          <button class="btn btn-outline-secondary" (click)="decreaseQuantity(i)">-</button>
                           <input
                             type="number"
                             class="form-control text-center"
-                            [(ngModel)]="item.quantity"
                             [min]="1"
+                            [value]="groceryCart.quantity[i]"
                             style="max-width: 60px;"
                           />
-                          <button class="btn btn-outline-secondary" (click)="increaseQuantity(item)">+</button>
+                          <button class="btn btn-outline-secondary" (click)="increaseQuantity(i)">+</button>
                         </div>
                       </div>
-                      <div class="td-item-price col-sm-3">₱{{ item.price * item.quantity }}</div>
+                      <div class="td-item-price col-sm-3">₱{{ groceryCart.unit_price[i] * groceryCart.quantity[i] }}</div>
                       <div class="col-md-3 text-end">
-                        <button class="btn btn-link text-danger p-0" (click)="removeItem(item)">Delete</button><br />
+                        <button class="btn btn-link text-danger p-0" (click)="removeItem(i)">Delete</button><br />
                         <a href="#" class="text-decoration-none text-secondary">Find Similar</a>
                       </div>
                     </div>
